--- a/views/index.ejs
+++ b/views/index.ejs
@@ -111,9 +111,9 @@
                 Last Updated
             </span>
             <span class="text-white font-medium">
-                <%= weightDate.toISOString().split('T')[0] %> 
-                <%= weightDate.toISOString().split('T')[1].split('.')[0] %>
-            </span>
+    <%= weightCreatedAt %>
+</span>
+
         </div>
     </div>
     <% } %>
